[package]
name = "qps_rust_oha"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1"
eframe = "0.33"
hdrhistogram = "7.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
shlex = "1.3"
tokio = { version = "1.47", features = ["rt-multi-thread", "sync", "time"] }
url = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
